# App-Orchestration-with-Airflow

./: .gitignore  315.ipynb  Dockerfile  Dockerfile.main.dockerignore  README.md  backup_main.py  backups_main.py  docker-compose.airflow.yaml  docker-compose.app.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
airflow/dags/: data_pipeline_dag.py  data_pipeline_docker_dag.py
dags/: .airflowignore  data_pipeline_docker_dag.py  data_pipeline_local_dag.py
dockerfiles/airflow_dockerfiles/: airflow.Dockerfile  airflow.Dockerfile.dockerignore  airflow.Dockerignore.dockerignore
dockerfiles/backup/: Dockerfile.backup  backup.Dockerfile  backup.Dockerfile.dockerignore
dockerfiles/main/: Dockerfile  Dockerfile.main.dockerignore  main.Dockerfile  main.Dockerfile.dockerignore
scripts/: create_folders_set_permissions.sh  for_secrets.sh  restart_app_airflow_containers.sh  run_backup_service.sh  run_main_services.sh  start_app_airflow_containers.sh  stop_app_airflow_containers.sh
sql/: analytics.sql  init.sql
src/: constants.py
src/airflow/airflow_dockerfiles/: Dockerfile  airflow.Dockerfile  docker-compose.airflow.yaml
src/airflow/dags/: config_dag.py  data_pipeline_dag.py  data_pipeline_docker_dag.py
src/backup_functions/: __init__.py  backup_functions.py
src/data_preparation/: __init__.py  data_preparation.py
src/db_functions/: __init__.py  data_movement.py  data_upload_sequence.py  db_connection.py  db_functions.py  db_tables.py
src/get_api_data/: __init__.py  get_api_data.py
src/get_jobs/: __init__.py  get_jobs.py
src/logger/: __init__.py  app_logger.py
