[tool.poetry]
name = "Job Application System"
version = "0.1.0"
description = "A system that routinely retrieves job listing data and stores it in a RDBMS."
authors = ["repeckadonatas <repeckadonatas@yahoo.comm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "=>3.11 <=3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
