[tool.poetry]
name = "Job Application System"
version = "0.1.0"
description = "A system that routinely retrieves job listing data and stores it in a RDBMS."
authors = ["repeckadonatas <repeckadonatas@yahoo.comm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
sqlalchemy = "2.0.29"
pandas = "2.2.2"
psycopg = {extras = ["binary"], version = "3.1.18"}
python-dotenv = "1.0.1"
requests = "2.32.2"
sqlalchemy-utils = "0.41.2"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
